sli/dashboard/src/main/webapp/builder/css/builder.css
[class^="icon-"],[class*=" icon-"] {
    background-image:url("../../static/images/glyphicons-halflings.png");
}
.icon-white, .nav > .active > a > [class^="icon-"], .nav > .active > a > [class*=" icon-"], .dropdown-menu > li > a:hover > [class^="icon-"], .dropdown-menu > li > a:hover > [class*=" icon-"], .dropdown-menu > .active > a > [class^="icon-"], .dropdown-menu > .active > a > [class*=" icon-"]  {
    background-image:url("../../static/images/glyphicons-halflings-white.png");
}
/* dashboard builder styles */
html, body {
    height: 100%;
    font-size: 12px;
}
h3 {
    font-size: 18px;
    line-height: 30px;
}
h4 {
    font-size: 14px;
    line-height: 18px;
}
.btn {
    font-size: 12px;
}

.ui-ellipsis {
    text-overflow: ellipsis;
    white-space: nowrap !important;
    overflow: hidden;
    padding-left: 2px;
}

.modal { position: relative; }
.wrapper {
    height: auto !important;
    margin-bottom: -30px;
    min-height: 100%;
    width: 100%;
    min-width: 920px;
}
#banner {
    border-bottom: 2px solid #000000;
    height: 28px;
    line-height: 28px;
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 0;
    padding-bottom: 12px;
    padding-left: 0;
    padding-top: 14px;
}

/* header styles needs to be updated in portal */
#sli_banner { height: 28px !important; min-height: 28px !important; }
.sli_logo_main, .sli_header_right { margin: 0 !important; line-height: 28px; }
.sli_logo_main a { padding: 0 2px; }
#simplemodal-overlay { background-color: #000; }


.banner-label {
    color: #D8D8D8;
    font-family: Arial,Helvetica,sans-serif;
    font-size: 36px;
    font-weight: normal;
}
.student-search-form {
    float: right;
    margin: 0;
}

ul.menu_n a {
    border: none;
    box-shadow: none;
    border-radius: 0;
    position: relative;
    top: 0;
    left: 0;
    width: auto;
}


.accordion-group { border: none; }
.accordion-heading .accordion-toggle { padding: 4px 8px; background: #f2f2f2; }
.accordion-heading a { color: #000; text-decoration: none; }
.accordion-inner { padding: 8px; }
.ui-dialog-titlebar { font-size: 16px; border-bottom: solid 1px #c2ccd1; margin-bottom: 20px; }
.ui-dialog-titlebar-close { visibility: hidden; }
.profileList { width: 120px; float: left; padding: 20px;}
.profilePageWrapper { padding: 20px; margin-left: 140px;}
.profilePageWrapper ul { clear: none !important; height: 35px; }
.profilePageWrapper h3 { background: #ccc; padding-left: 10px; margin-bottom: 20px; }
.sectionProfile { margin: 20px 0; }
.profile_list { list-style-type: none; padding: 0; margin: 0;}
.profile_list a {  color: #000000; text-decoration: underline; }
.profile_list a:hover { text-decoration: none; }

.page-actions { margin-bottom: 20px; }
.addPageSection { margin-left: 10px; }
.addPageSection .btn { padding: 6px 14px; }
#txt_input { width: 350px; }
.dialogBox { display: none;}
.dialogBox ul { margin: 0; padding: 0; list-style-type: none; }
.dialogBox ul li { margin: 10px 0; }
.errorMessage { border: 1px solid #FF0000; color: #FF0000; font-weight: bold; margin: 20px; padding: 20px; }
.formError { display: none; }
.error .formError { display: block; color: #b94a48; }
#footer { bottom: auto !important; clear: both; height: 20px; position: absolute !important; width: 100%; }
#sli_footer .sli_footer_wrap { border-top: 2px solid #000000 !important; padding-bottom: 5px; }

.tab-content { width: 100%; }
.nav-tabs { border-bottom: 2px solid #000000; }
.nav-tabs > li > a { border-radius: 0; line-height: 19px; color: #000; background-color: #f2f2f2; line-height: 17px; }
.nav-tabs > li > a:hover { line-height: 17px; }
.nav-tabs > .active > a, .nav-tabs > .active > a:hover { line-height: 19px; color: #000; font-weight: bold; border: solid 2px #000000; border-bottom: 0 none; }

.panels ul { margin: 30px 0; height: auto; }
.panels ul li { background: #f2f2f2; padding: 5px; margin: 10px 0; }
.panels input { margin-bottom: 0; font-size: 12px; }
#allPanelsModal ul li { margin: 10px; padding: 5px; background: #f2f2f2; }


#panelSelectable .ui-selecting { background: #ccc; }
#panelSelectable .ui-selected { background: #49AFCD; color: white; }


#errorMessage { display: none; }
#addNewPanelBtn { float: left; }
.show-true { display: block; }
.show-false { display: none; }

.profilePageWrapper ul.panelList { height: auto; }

